--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2016.12.27</version>
+  <version>2017.01.04</version>
 
   <build>
     <plugins>
@@ -143,6 +143,11 @@
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-ieee754b16</artifactId>
       <version>7.0.0-beta0012</version>
+    </dependency>
+    <dependency>
+      <groupId>com.io7m.mkcsr</groupId>
+      <artifactId>mkcsr</artifactId>
+      <version>1.3.0</version>
     </dependency>
   </dependencies>
 
