--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2017.01.04</version>
+  <version>2017-01-30</version>
 
   <build>
     <plugins>
@@ -35,9 +35,9 @@
       <version>0.1.0</version>
     </dependency>
     <dependency>
-      <groupId>com.io7m.jwhere</groupId>
-      <artifactId>io7m-jwhere-cmdline</artifactId>
-      <version>0.5.1</version>
+      <groupId>com.io7m.jcalcium</groupId>
+      <artifactId>io7m-jcalcium-cmdline</artifactId>
+      <version>0.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jstructural</groupId>
@@ -132,17 +132,17 @@
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-core</artifactId>
-      <version>7.0.0-beta0012</version>
+      <version>7.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-bytebuffered</artifactId>
-      <version>7.0.0-beta0012</version>
+      <version>7.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-ieee754b16</artifactId>
-      <version>7.0.0-beta0012</version>
+      <version>7.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.mkcsr</groupId>
