--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2017-03-15</version>
+  <version>2017-04-06</version>
 
   <build>
     <plugins>
@@ -143,6 +143,11 @@
       <groupId>com.io7m.smfj</groupId>
       <artifactId>io7m-smfj-format-binary</artifactId>
       <version>0.9.0</version>
+    </dependency>
+    <dependency>
+      <groupId>com.io7m.jnull</groupId>
+      <artifactId>com.io7m.jnull.core</artifactId>
+      <version>1.1.0</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jnull</groupId>
