--- a/pom.xml
+++ b/pom.xml
@@ -155,6 +155,11 @@
       <version>1.0.2</version>
     </dependency>
     <dependency>
+      <groupId>com.io7m.junreachable</groupId>
+      <artifactId>com.io7m.junreachable.core</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-core</artifactId>
       <version>7.1.0</version>
