--- a/pom.xml
+++ b/pom.xml
@@ -145,6 +145,11 @@
       <version>0.9.0</version>
     </dependency>
     <dependency>
+      <groupId>com.io7m.ieee754b16</groupId>
+      <artifactId>com.io7m.ieee754b16.core</artifactId>
+      <version>1.0.3</version>
+    </dependency>
+    <dependency>
       <groupId>com.io7m.jnull</groupId>
       <artifactId>com.io7m.jnull.core</artifactId>
       <version>1.1.0</version>
