--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.io7m.jranges</groupId>
+      <artifactId>com.io7m.jranges.core</artifactId>
+      <version>2.0.4</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.io7m.zeptoblog</groupId>
       <artifactId>com.io7m.zeptoblog.core</artifactId>
       <version>0.3.0</version>
