--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2017-04-07</version>
+  <version>2017-04-08</version>
 
   <build>
     <plugins>
@@ -56,6 +56,12 @@
     </dependency>
 
     <dependency>
+      <groupId>com.io7m.jareas</groupId>
+      <artifactId>com.io7m.jareas.core</artifactId>
+      <version>0.2.2</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.io7m.junsigned</groupId>
       <artifactId>com.io7m.junsigned.core</artifactId>
       <version>1.0.1</version>
@@ -64,6 +70,12 @@
       <groupId>com.io7m.junsigned</groupId>
       <artifactId>com.io7m.junsigned.ranges</artifactId>
       <version>1.0.1</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.io7m.mutable.numbers</groupId>
+      <artifactId>com.io7m.mutable.numbers.core</artifactId>
+      <version>0.0.2</version>
     </dependency>
 
     <dependency>
@@ -92,36 +104,43 @@
       <artifactId>com.io7m.zeptoblog.commonmark</artifactId>
       <version>0.3.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.changelog</groupId>
       <artifactId>io7m-changelog-plugin</artifactId>
       <version>3.0.3</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.gtyrell</groupId>
       <artifactId>io7m-gtyrell-server</artifactId>
       <version>1.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jcalcium</groupId>
       <artifactId>io7m-jcalcium-cmdline</artifactId>
       <version>0.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jstructural</groupId>
       <artifactId>io7m-jstructural-maven-plugin</artifactId>
       <version>5.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jguard</groupId>
       <artifactId>io7m-jguard-cmdline</artifactId>
       <version>0.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.timehack6435126</groupId>
       <artifactId>io7m-timehack6435126-core</artifactId>
       <version>1.0.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jsycamore</groupId>
       <artifactId>io7m-jsycamore-core</artifactId>
@@ -137,46 +156,55 @@
       <artifactId>io7m-jsycamore-caffeine</artifactId>
       <version>0.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jspatial</groupId>
       <artifactId>io7m-jspatial-implementation</artifactId>
       <version>3.0.0-SNAPSHOT</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jpra</groupId>
       <artifactId>io7m-jpra-maven-plugin</artifactId>
       <version>0.5.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jpismo</groupId>
       <artifactId>io7m-jpismo-core</artifactId>
       <version>0.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jcamera</groupId>
       <artifactId>io7m-jcamera-core</artifactId>
       <version>0.4.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jcage</groupId>
       <artifactId>io7m-jcage-core</artifactId>
       <version>0.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.kstructural</groupId>
       <artifactId>io7m-kstructural-cmdline</artifactId>
       <version>0.3.1</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.r2</groupId>
       <artifactId>io7m-r2-main</artifactId>
       <version>0.2.1</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jcanephora</groupId>
       <artifactId>io7m-jcanephora-jogl</artifactId>
       <version>0.53.1</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.smfj</groupId>
       <artifactId>io7m-smfj-core</artifactId>
@@ -192,36 +220,49 @@
       <artifactId>io7m-smfj-format-binary</artifactId>
       <version>0.9.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jaffirm</groupId>
       <artifactId>com.io7m.jaffirm.core</artifactId>
       <version>1.0.1</version>
     </dependency>
+
+    <dependency>
+      <groupId>com.io7m.jnfp</groupId>
+      <artifactId>com.io7m.jnfp.core</artifactId>
+      <version>0.1.2</version>
+    </dependency>
+
     <dependency>
       <groupId>com.io7m.ieee754b16</groupId>
       <artifactId>com.io7m.ieee754b16.core</artifactId>
       <version>1.0.3</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jnull</groupId>
       <artifactId>com.io7m.jnull.core</artifactId>
       <version>1.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jnull</groupId>
       <artifactId>io7m-jnull-core</artifactId>
       <version>1.0.2</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.junreachable</groupId>
       <artifactId>com.io7m.junreachable.core</artifactId>
       <version>1.0.3</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jeucreader</groupId>
       <artifactId>com.io7m.jeucreader.core</artifactId>
       <version>1.1.2</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-core</artifactId>
@@ -237,16 +278,19 @@
       <artifactId>io7m-jtensors-ieee754b16</artifactId>
       <version>7.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.mkcsr</groupId>
       <artifactId>mkcsr</artifactId>
       <version>1.4.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.sigiltron</groupId>
       <artifactId>sigiltron</artifactId>
       <version>1.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>com.io7m.jregions</groupId>
       <artifactId>com.io7m.jregions.core</artifactId>
