--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2017-04-08</version>
+  <version>2017-04-09</version>
 
   <build>
     <plugins>
@@ -59,6 +59,12 @@
       <groupId>com.io7m.jareas</groupId>
       <artifactId>com.io7m.jareas.core</artifactId>
       <version>0.2.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.io7m.jproperties</groupId>
+      <artifactId>com.io7m.jproperties.core</artifactId>
+      <version>1.0.3</version>
     </dependency>
 
     <dependency>
@@ -166,7 +172,7 @@
     <dependency>
       <groupId>com.io7m.jpra</groupId>
       <artifactId>io7m-jpra-maven-plugin</artifactId>
-      <version>0.5.0</version>
+      <version>0.6.0</version>
     </dependency>
 
     <dependency>
@@ -202,7 +208,7 @@
     <dependency>
       <groupId>com.io7m.jcanephora</groupId>
       <artifactId>io7m-jcanephora-jogl</artifactId>
-      <version>0.53.1</version>
+      <version>0.60.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
@@ -224,7 +230,7 @@
     <dependency>
       <groupId>com.io7m.jaffirm</groupId>
       <artifactId>com.io7m.jaffirm.core</artifactId>
-      <version>1.0.1</version>
+      <version>1.1.0</version>
     </dependency>
 
     <dependency>
@@ -266,17 +272,17 @@
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-core</artifactId>
-      <version>7.1.0</version>
+      <version>8.0.0-beta0001</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-bytebuffered</artifactId>
-      <version>7.1.0</version>
+      <version>8.0.0-beta0001</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jtensors</groupId>
       <artifactId>io7m-jtensors-ieee754b16</artifactId>
-      <version>7.1.0</version>
+      <version>8.0.0-beta0001</version>
     </dependency>
 
     <dependency>
@@ -294,12 +300,12 @@
     <dependency>
       <groupId>com.io7m.jregions</groupId>
       <artifactId>com.io7m.jregions.core</artifactId>
-      <version>0.0.4</version>
+      <version>0.0.6</version>
     </dependency>
     <dependency>
       <groupId>com.io7m.jregions</groupId>
       <artifactId>com.io7m.jregions.generators</artifactId>
-      <version>0.0.4</version>
+      <version>0.0.6</version>
     </dependency>
   </dependencies>
 
