--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.io7m.jserial</groupId>
+      <artifactId>com.io7m.jserial.core</artifactId>
+      <version>0.2.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
       <groupId>com.io7m.jsycamore</groupId>
       <artifactId>com.io7m.jsycamore.core</artifactId>
       <version>0.1.0</version>
