--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.io7m.universe</groupId>
   <artifactId>universe</artifactId>
-  <version>2017-04-24</version>
+  <version>2017-04-25</version>
 
   <properties>
   </properties>
@@ -202,7 +202,7 @@
 
     <dependency>
       <groupId>com.io7m.jspatial</groupId>
-      <artifactId>io7m-jspatial-implementation</artifactId>
+      <artifactId>com.io7m.jspatial.implementation</artifactId>
       <version>3.0.0-SNAPSHOT</version>
     </dependency>
 
